syntax = "proto3";
package photon;

import "core.proto";

service FeaturesService {
    rpc List(EmptyRequest) returns (stream FeatureSet);
    rpc Find(FindFeatureSetRequest) returns (FeatureSet);
    rpc Create(CreateFeatureSetRequest) returns (CreateFeatureSetResponse);
    rpc Delete(DeleteFeatureSetRequest) returns (EmptyResponse);
}

message FeatureSet {
    int64 id                        = 1;
    string name                     = 2;
    repeated string keys            = 3;
    repeated FeatureSetField fields = 4;
    int32 created_at                = 5;
    int32 updated_at                = 6;
}

message FeatureSetField {
    int64 feature_set_id    = 1;
    string name             = 2;
    string value_type       = 3;
    bool nullable           = 4;
}

message FindFeatureSetRequest {
    int64 id = 1;
}

message CreateFeatureSetRequest {
    string name                     = 1;
    repeated string keys            = 2;
    repeated FeatureSetField fields = 3;
}

message CreateFeatureSetResponse {
    int64 id = 1;
}

message DeleteFeatureSetRequest {
    int64 id = 1;
}
